[Espresso 기능 Test] package 구조 변경.

--- a/app/src/main/res/layout/activity_espresso_test.xml
+++ b/app/src/main/res/layout/activity_espresso_test.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.study_tdd.espressotest.EspressoViewModel" />
+            type="com.example.study_tdd.espressotest.basic.EspressoViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
